# Told-You-So-Repo

./: Cargo.toml
data/: peng_cp.csv  penguins.sql
process_data/: Cargo.toml
process_data/src/: column.rs  column_wrp.rs  frame.rs  helpe.rs
process_data2/: Cargo.toml
process_data2/src/: column.rs  conversion.rs  frame.rs  helpe.rs
src/: bin_encode.rs  encoders.rs  lists.rs  main.rs  num_gen.rs  others.rs  process_csv.rs  recursions.rs  solutions.rs  stats.rs  users.rs
stats/src/: lib.rs
structs/src/: heap.rs  lib.rs
structs/src/list/: list.rs  node.rs
