
workspace = { members = ["trees", "advent", "algos", "graph", "structs"] }

[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]

structs = { path = "./structs" }
trees = { path = "./trees" }
advent = { path = "./advent" }
algos = { path = "./algos" }
graph = { path = "./graph" }


chrono = { version="0.4.31", features=["serde"] }
tokio = { version="1.33.0", features=["full"] }

num-complex = "0.4.3"
rand="0.8.5"
num-bigint = { version="0.4.3", features=["rand"]}
colored = "2.1.0"
